@@ -1,9 +1,10 @@
 Description: Use the correct library naming scheme on OS X. It differs from other UNIX-based systems.
 Author: Clemens Lang <cal@macports.org>
+v2: Make sure only the first three digits are used for current_version. (Mihai Moldovan)
 
 --- a/nxcomp/Makefile.in
 +++ b/nxcomp/Makefile.in
-@@ -91,9 +91,17 @@ DEPENDINCLUDES = -I/usr/include/c++ -I/u
+@@ -91,9 +91,18 @@ DEPENDINCLUDES = -I/usr/include/c++ -I/u
  LIBRARY = Xcomp
  
  LIBNAME    = lib$(LIBRARY)
@@ -11,7 +12,8 @@ Author: Clemens Lang <cal@macports.org>
 +LIBFULL    = lib$(LIBRARY).$(VERSION).dylib
 +LIBLOAD    = lib$(LIBRARY).$(LIBVERSION).dylib
 +LIBSHARED  = lib$(LIBRARY).dylib
-+LIBFLAGS   = -install_name $(libdir)/$(LIBLOAD) -compatibility_version $(LIBVERSION) -current_version $(VERSION)
++COMP_VER   = $(shell echo '$(VERSION)' | cut -d '.' -f 1-3)
++LIBFLAGS   = -install_name $(libdir)/$(LIBLOAD) -compatibility_version $(LIBVERSION) -current_version $(COMP_VER)
 +else
  LIBFULL    = lib$(LIBRARY).so.$(VERSION)
  LIBLOAD    = lib$(LIBRARY).so.$(LIBVERSION)
@@ -21,7 +23,7 @@ Author: Clemens Lang <cal@macports.org>
  LIBARCHIVE = lib$(LIBRARY).a
  
  LIBCYGSHARED  = cyg$(LIBRARY).dll
-@@ -232,7 +240,7 @@ COBJ   = $(CSRC:.c=.o)
+@@ -232,7 +241,7 @@ COBJ   = $(CSRC:.c=.o)
  CXXOBJ = $(CXXSRC:.cpp=.o)
  
  $(LIBFULL):	 $(CXXOBJ) $(COBJ)
@@ -30,7 +32,7 @@ Author: Clemens Lang <cal@macports.org>
  
  $(LIBLOAD):	 $(LIBFULL)
  		 rm -f $(LIBLOAD)
-@@ -278,9 +286,9 @@ install.lib: all
+@@ -278,9 +287,9 @@ install.lib: all
  	./mkinstalldirs $(DESTDIR)${libdir}
  	./mkinstalldirs $(DESTDIR)${includedir}/nx
  	$(INSTALL_DATA) $(LIBFULL)              $(DESTDIR)${libdir}
@@ -43,7 +45,7 @@ Author: Clemens Lang <cal@macports.org>
  	$(INSTALL_DATA) NX*.h                   $(DESTDIR)${includedir}/nx
  	$(INSTALL_DATA) MD5.h                   $(DESTDIR)${includedir}/nx
  	echo "Running ldconfig tool, this may take a while..." && ldconfig || true
-@@ -293,9 +301,9 @@ uninstall.bin:
+@@ -293,9 +302,9 @@ uninstall.bin:
  
  uninstall.lib:
  	$(RM_FILE) $(DESTDIR)${libdir}/$(LIBFULL)
